[project]
name = "rent-assist"
version = "0.1.0"
description = "Rent Assist Backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi[standard]>=0.115.12",
    "jsonpath-ng>=1.7.0",
    "jsonschema>=4.23.0",
    "orjson>=3.10.16",
    "pydantic-settings>=2.8.1",
    "scalar-fastapi>=1.0.3",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "pytest-asyncio>=0.26.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "asyncpg>=0.30.0",
    "alembic>=1.15.2",
    "python-json-logger>=4.0.0",
    "tenacity>=9.1.2",
    "redis>=5.2.0",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["rent_assist"]
exclude = [
    "tests",
    "*.tests",
    "*.tests.*",
    "tests.*"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "aiosqlite>=0.20.0"
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "pymdown-extensions>=10.16",
]

test = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0"
]

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["rent_assist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["rent_assist"]
